fix overflowing issues

--- a/business_style.css
+++ b/business_style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html{
+    overflow-x: hidden;
+}
 body {
     font-family: 'Rubik', sans-serif;
     overflow-x: hidden;
