--- a/power_style.css
+++ b/power_style.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html {
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Rubik', sans-serif;
     overflow-x: hidden;
